fixed card text length and some spacing on homepage

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -65,3 +65,7 @@
 .go-back {
   margin-bottom: 10px;
 }
+
+#home-discover-button {
+  padding-top: 5%;
+}
