--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 
 .home-preview {
   margin: 5px;
-  margin-bottom: 80px;
+  margin-bottom: 200px;
 }
 
 .home-preview h3 {
